# rust-ai-tool

./: Cargo.toml  README.md  init_repo.sh
.github/workflows/: ci.yml  release.yml
bindings/: python_api.py
models/: ai_integration.rs  mod.rs
src/: analysis.rs  cli.rs  github.rs  lib.rs  main.rs  modification.rs  project_generator.rs  validation.rs
