[package]
name = "rust-ai-tool"
version = "0.1.0"
edition = "2021"
authors = ["Your Team <team@example.com>"]
description = "Rust AI-Powered Project Analyzer & Code Refactoring Tool"
license = "MIT"
repository = "https://github.com/yourusername/rust-ai-tool"
keywords = ["ai", "code-analysis", "refactoring", "rust-analyzer"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "rust_ai_tool"
path = "src/lib.rs"

[[bin]]
name = "rust-ai-tool"
path = "src/main.rs"

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# Rust analysis
ra_ap_syntax = "0.0.149"  # Rust Analyzer syntax library
ra_ap_ide = "0.0.149"     # Rust Analyzer IDE library
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# GitHub integration
octocrab = "0.25"         # GitHub API client
reqwest = { version = "0.11", features = ["json"] }

# Security & validation
ring = "0.16"
data-encoding = "2.4"

# Project management
walkdir = "2.3"
pathdiff = "0.2"
same-file = "1.0"

# Configuration
toml = "0.7"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.6"
pretty_assertions = "1.3"
test-case = "3.1"

[features]
default = ["github-integration", "ai-refactoring"]
github-integration = []
ai-refactoring = []
local-only = []